# Prototipo_analisis_rondas

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260612_0001_initial_schema.py
backend/app/: main.py  seeds.py
backend/app/api/: anomalies.py  auth.py  checkpoints.py  dashboard.py  routes.py  scans.py  sessions.py  sites.py  telemetry.py  users.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  anomaly.py  checkpoint.py  patrol_session.py  route.py  scan.py  site.py  telemetry.py  user.py
backend/app/schemas/: anomaly.py  auth.py  checkpoint.py  route.py  scan.py  session.py  site.py  telemetry.py  user.py
backend/app/services/: analysis_service.py  scan_service.py  telemetry_service.py
backend/app/tasks/: analysis.py  celery_app.py
backend/tests/: conftest.py  factories.py  test_admin_api.py  test_analysis.py  test_auth.py  test_scans.py  test_sessions.py  test_telemetry.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/auth/: AuthContext.tsx
dashboard/src/components/: Layout.tsx
dashboard/src/lib/: labels.ts  mapStyle.ts
dashboard/src/pages/: KpisPage.tsx  (+4 more)
mobile/: .env.example  README.md  app.json  index.ts  package-lock.json  package.json  tsconfig.json
mobile/android/: settings.gradle
mobile/src/: App.tsx  config.ts
(+23 files in other folders)
