[project]
name = "rondas-backend"
version = "0.1.0"
description = "Backend del Sistema de Monitoreo Inteligente de Rondas de Seguridad (Protemaxi)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
